# ppes-nn

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  plan.md
cmake/: link_binary.cmake  pico_sdk.cmake
data/: .gitignore  download_mnist.sh  split_mnist_test.sh
docs/: EVALUATION.md  NEURAL_NETWORK.md  PLAN.md  Presentation.pptx  TENSORS.md
nn/: CMakeLists.txt
nn/autograd/: autograd.hpp  functions.hpp  variable.cpp  variable.hpp
nn/matrix/: matrix.hpp  ops.hpp
nn/nn/: all.hpp  module.hpp  mse.hpp  random.hpp  sequential.cpp  sequential.hpp
nn/nn/dataset/: dataset.hpp  mnist_dataset.cpp  mnist_dataset.hpp
nn/nn/loss/: loss.hpp
nn/nn/modules/: linear.cpp  linear.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  softmax.hpp
nn/nn/optim/: sgd.hpp
nn/nn/quantization/: quantization.hpp
nn/nn/quantization/modules/: quantized_linear.hpp
nn/tensor/: autodiff.hpp  tensor.hpp  tensor_data.hpp  tensor_functions.hpp  tensor_ops.hpp  tensor_util.hpp
nn/tensor/quantization/: quantization.hpp  quantized_ops.hpp  quantized_tensor.hpp
src/: CMakeLists.txt  leak.cpp  main.cpp  main_pretrained.cpp  main_pruning.cpp  mnist.cpp  mnist_bin.cpp  mnist_pretrained.cpp  mnist_pruning.cpp  mnist_train.cpp  tensor.cpp  train.hpp  xor.cpp  xor_pretrained.cpp
src/autograd/: autograd.hpp  functions.cpp  functions.hpp  variable.cpp  variable.hpp
src/nn/: sequential.cpp
src/nn/modules/: linear.cpp  linear.hpp  sigmoid.cpp
src/pico/: CMakeLists.txt  evaluate.hpp  main_pico.cpp  mnist_pico.cpp  xor_pico.cpp
tests/: CMakeLists.txt  matrix.test.cpp  tensor.test.cpp
tests/nn/: sequential.test.cpp
tests/nn/loss/: loss.test.cpp  mse.test.cpp
tests/nn/modules/: linear.test.cpp  relu.test.cpp
tests/nn/optim/: sgd.test.cpp
tests/tensor/: autodiff.test.cpp  tensor.test.cpp  tensor_data.test.cpp  tensor_init.test.cpp  tensor_math.test.cpp
tests/tensor/quantization/: quantized_tensor.test.cpp
trained_models/: XOR_Model.hpp  mnist_float_300_2_pruned_100.hpp  xor.hpp
